# Copyright 2021-2022 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('cairo', type: 'feature', value: 'auto',
       description : 'Enable support for the Cairo graphics API')

option('examples', type: 'feature', value: 'auto', yield: true,
       description: 'Build example programs')

option('docs', type: 'feature', value: 'auto',
       description: 'Build documentation')

option('docs_cpp', type: 'boolean', value: false,
       description: 'Attempt to build C++ documentation for development')

option('opengl', type: 'feature', value: 'auto',
       description : 'Enable support for the OpenGL graphics API')

option('strict', type: 'boolean', value: false,
       description: 'Enable ultra-strict warnings for developers')

option('stub', type: 'boolean', value: true,
       description: 'Build stub backend')

option('tests', type: 'feature', value: 'auto', yield: true,
       description: 'Build tests')

option('vulkan', type: 'feature', value: 'auto',
       description : 'Enable support for the Vulkan graphics API')
